k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/platform
            pathType: Prefix
            backend: 
              service:
                name: platforms-clusterip-srv
                port: 
                  number: 80
          - path: /api/command
            pathType: Prefix
            backend: 
                service:
                  name: commands-clusterip-srv
                  port:  
                    number: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: ingress
#   namespace: ingress
# spec:
#   selector:
#     name: ingress-srv
#   type: LoadBalancer
#   # loadBalancerIP: 181.206.72.125
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 80
#     - name: https
#       protocol: TCP
#       port: 443
#       targetPort: 443
